force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__DataSourceApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataSourceApplicationName__c</fullName>
    <label>Data Source Application Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DataSourceApplicationName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>