force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__rel_1724390973558_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724390973558_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationEntry_SourceId_map_Voice_rel</label>
    <referenceTo>ssot__VoiceCall__dlm</referenceTo>
    <relationshipLabel>ConversationEntry_SourceId_map_Voice_rel</relationshipLabel>
    <relationshipName>rel_1724390973558_end</relationshipName>
    <type>Lookup</type>
</CustomField>