force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__rel_1726825233112_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825233112_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationEntry_SourceId_map_Video_rel</label>
    <referenceTo>ssot__VideoCall__dlm</referenceTo>
    <relationshipLabel>ConversationEntry_SourceId_map_Video_rel</relationshipLabel>
    <relationshipName>rel_1726825233112_end</relationshipName>
    <type>Lookup</type>
</CustomField>